<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prorate Calculator</string>
    <string name="version_name">1.0.0</string>
    <string name="ad_unit_id">ca-app-pub-1783941673126759/1469749800</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="renting_rate">What is the monthly property lease?</string>
    <string name="rent_hint">ex. 950.00</string>
    <string name="moving_situation">Will the tenant be Moving In or Out?</string>
    <string name="moving_in">Moving In</string>
    <string name="moving_out">Moving Out</string>
    <string name="moving_date">What is the scheduled move date?</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="days_array">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>
    <string name="year_hint">ex. 2014</string>
    <string name="display_area">Your results will display here.</string>
    <string name="calculate_rate">Calculate Rate</string>
    <string name="image_des">Prorate Calculator Logo</string>
    <string name="sites">http://www.coreyarogers.com/ \n http://www.shakeisamu.com/</string>

</resources>
