<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coreyarogers.proratecalculator.MainActivity">

    <TextView
        android:id="@+id/monthlyRateTextView"
        android:text="@string/renting_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/monthlyRateEditText"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/monthlyRateTextView"
        android:hint="@string/rent_hint"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <TextView
        android:id="@+id/movingTextView"
        android:text="@string/moving_situation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/monthlyRateEditText" />

    <RadioGroup
        android:id="@+id/movingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movingTextView">

        <RadioButton
            android:id="@+id/movingInRadio"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/moving_in"
            android:checked="true" />

        <RadioButton
            android:id="@+id/movingOutRadio"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/moving_out"
            android:checked="false"/>
    </RadioGroup>

    <TextView
        android:id="@+id/movingDateTextView"
        android:text="@string/moving_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movingRadioGroup" />

    <Spinner
        android:id="@+id/monthsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/movingDateTextView"
        android:entries="@array/months_array" />

    <Spinner
        android:id="@+id/daysSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/movingDateTextView"
        android:layout_toRightOf="@id/monthsSpinner"
        android:entries="@array/days_array" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/movingDateTextView"
        android:layout_toRightOf="@id/daysSpinner"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:maxLength="4"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="6dp"
        android:text="@string/calculate_rate"
        android:layout_below="@+id/monthsSpinner" />

    <ScrollView
        android:id="@+id/displayScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="56dp"
        android:fillViewport="true"
        android:background="#E6E6E6"
        android:layout_below="@id/calculateBtn"
        android:fadeScrollbars="false" >
    <TextView
        android:id="@+id/display"
        android:background="#E6E6E6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="56dp"
        android:text="@string/display_area"
        android:textSize="15sp"
        android:textStyle="bold" />
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/displayScrollView"
        ads:adUnitId="@string/ad_unit_id"
        ads:adSize="BANNER" />

</RelativeLayout>
